fix: removed z-index from site content as this made it inaccessible

--- a/src/shared/_content.scss
+++ b/src/shared/_content.scss
@@ -15,8 +15,6 @@
 }
 
 .site-content {
-    z-index: -1;
-    position: relative;
 
     .content-area {
     	margin-top: -72px;
